[project]
name = "orbits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ioannis Michaloliakos", email = "ioannis.michalol@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.scripts]
orbits = "orbits:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "test"},
]

test = [
    "pytest>=8.4.1",
]
